# Kitsunet-Share

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
